# src/route/loginRoute.js
@@ -4,6 +4,7 @@ const userloginController = require('../controller/loginController');
 const verifyToken = require('../middleware');
 
 router.get('/users', verifyToken, userloginController.getUsers);
+router.get('/verify-otp', userloginController.verifyUser);
 router.post('/login', userloginController.createUser);
 
 module.exports = router;
